--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ dependencies = [
     "jupyterlab-server==2.27.3",
     "jupyterlab-widgets==3.0.15",
     "markupsafe==3.0.2",
+    "matplotlib>=3.10.1",
     "matplotlib-inline==0.1.7",
     "mistune==3.1.3",
     "nbclient==0.10.2",
@@ -87,6 +88,9 @@ dependencies = [
     "rfc3339-validator==0.1.4",
     "rfc3986-validator==0.1.1",
     "rpds-py==0.24.0",
+    "scikit-learn>=1.6.1",
+    "scipy>=1.15.2",
+    "seaborn>=0.13.2",
     "send2trash==1.8.3",
     "setuptools==80.3.1",
     "six==1.17.0",
@@ -107,4 +111,5 @@ dependencies = [
     "webencodings==0.5.1",
     "websocket-client==1.8.0",
     "widgetsnbextension==4.0.14",
+    "xgboost>=3.0.0",
 ]
