--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,7 @@ dependencies = [
     "pydantic>=2.3.0",
     "pygments==2.19.1",
     "python-dateutil==2.9.0.post0",
+    "python-dotenv>=1.1.0",
     "python-json-logger==3.3.0",
     "python-multipart>=0.0.6",
     "pytz==2025.2",
