--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,32 @@
-fastapi>=0.103.1
-uvicorn>=0.23.2
-pydantic>=2.3.0
-scikit-learn>=1.3.0
-pandas>=2.1.0
-numpy>=1.25.2
-xgboost>=1.7.6
-python-multipart>=0.0.6
+annotated-types==0.7.0
+anyio==4.9.0
+certifi==2025.4.26
+click==8.1.8
+fastapi==0.115.12
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+joblib==1.5.0
+numpy==2.2.5
+packaging==25.0
+pandas==2.2.3
+pluggy==1.5.0
+pydantic==2.11.4
+pydantic_core==2.33.2
+pytest==8.3.5
+python-dateutil==2.9.0.post0
+python-multipart==0.0.20
+pytz==2025.2
+scikit-learn==1.6.1
+scipy==1.15.2
+six==1.17.0
+sniffio==1.3.1
+starlette==0.46.2
+threadpoolctl==3.6.0
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+uvicorn==0.34.2
+xgboost==3.0.0
