--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,69 @@
-#FASTAPI y Stack ASGI
-fastapi==0.108.0              # Framework web moderno y rápido para construir APIs
-uvicorn==0.27.1               # Servidor ASGI para correr apps FastAPI
-starlette==0.36.3             # Toolkit ASGI sobre el que está construido FastAPI
-httpx==0.26.0                 # Cliente HTTP asíncrono para consumir APIs externas
-httpcore==1.0.2               # Núcleo de transporte para httpx
-h11==0.14.0                   # Implementación de HTTP/1.1 (base para servidores ASGI)
-python-multipart==0.0.6       # Permite recibir archivos vía formularios en FastAPI
-anyio==4.2.0                  # Librería para concurrencia asincrónica (usada por httpx y Starlette)
-sniffio==1.3.0                # Detecta el entorno async actual (usado por AnyIO)
-
-#Ciencia de Datos y Machine Learning
-numpy==1.26.3                 # Librería para operaciones matemáticas y arrays
-pandas==2.1.4                 # Manipulación y análisis de datos en tablas
-scikit-learn==1.3.2           # Algoritmos de machine learning clásicos
-scipy==1.11.4                 # Funciones científicas y estadísticas
-xgboost==2.0.3                # Implementación eficiente de gradient boosting
-joblib==1.3.2                 # Serialización de modelos y paralelización en sklearn
-threadpoolctl==3.2.0          # Control de uso de hilos (usado por numpy y sklearn)
-
-#Testing y Configuración
-pytest==7.4.3                 # Framework de pruebas para Python
-iniconfig==2.0.0              # Permite configurar pytest con archivos .ini
-
-#Validación de datos y Tipado
-pydantic==2.5.2               # Validación de datos y tipos (clave en FastAPI)
-pydantic_core==2.14.5         # Núcleo ultrarrápido de validación de Pydantic v2
-annotated-types==0.6.0        # Tipado avanzado para uso con Pydantic
-typing-inspection==0.9.0      # Utilidades para inspeccionar tipos genéricos
-typing_extensions==4.8.0      # Extensiones de typing para compatibilidad
-
-#Manejo de Fechas y Zonas Horarias
-python-dateutil==2.8.2        # Parsing flexible de fechas
-pytz==2023.3.post1            # Zonas horarias para pandas y datetime
-tzdata==2023.4                # Base de datos de zonas horarias IANA
-
-#Red, Codificación y Certificados
-idna==3.6                     # Codificación internacional de nombres de dominio
-certifi==2023.11.17           # Certificados SSL para conexiones seguras
-
-#Utilidades generales
-click==8.1.7                  # Librería para crear interfaces de línea de comandos
-packaging==23.2               # Comparación y análisis de versiones de paquetes
-six==1.16.0                   # Compatibilidad entre Python 2 y 3 (todavía usado por algunos paquetes)
-
-#Base de datos
-sqlalchemy==2.0.23            # ORM para bases de datos
-psycopg2-binary==2.9.9        # Driver para PostgreSQL (versión binaria sin necesidad de compilar)
+annotated-types==0.7.0
+anyio==4.9.0
+asttokens==3.0.0
+certifi==2025.4.26
+click==8.1.8
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.2
+cycler==0.12.1
+debugpy==1.8.14
+decorator==5.2.1
+executing==2.2.0
+fastapi==0.115.12
+fonttools==4.57.0
+greenlet==3.2.2
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+ipykernel==6.29.5
+ipython==9.2.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+joblib==1.5.0
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.8
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+numpy==2.2.5
+packaging==25.0
+pandas==2.2.3
+parso==0.8.4
+pillow==11.2.1
+platformdirs==4.3.7
+pluggy==1.5.0
+prompt_toolkit==3.0.51
+psutil==7.0.0
+psycopg2==2.9.10
+pure_eval==0.2.3
+pydantic==2.11.4
+pydantic_core==2.33.2
+Pygments==2.19.1
+pyparsing==3.2.3
+pytest==8.3.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+pywin32==310
+pyzmq==26.4.0
+scikit-learn==1.6.1
+scipy==1.15.2
+seaborn==0.13.2
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.40
+stack-data==0.6.3
+starlette==0.46.2
+threadpoolctl==3.6.0
+tornado==6.4.2
+traitlets==5.14.3
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+uvicorn==0.34.2
+wcwidth==0.2.13
+xgboost==3.0.0
